# src/swagger/swagger.json
@@ -2313,7 +2313,7 @@
       },
       "put": {
         "summary": "Modifica stato ordine",
-        "description": "Viene modificato lo stato dell'ordine",
+        "description": "Viene modificato lo stato dell'ordine e indicato se è stata scritta una recensione",
         "security": [
           {
             "ApiKeyAuth": [
@@ -2812,6 +2812,10 @@
           },
           "newState": {
             "type": "string"
+          },
+          "newReviewed": {
+            "type": "boolean",
+            "default": false
           }
         }
       },
